--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=note-app
+
+# mysql config
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:password}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE_NAME:note_for_all}
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# encoding
+server.servlet.encoding.charset=UTF-8
+
+# stacktrace
+server.error.include-stacktrace=on_param
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# timezone
+spring.jackson.time-zone=Asia/Bangkok
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Bangkok
